--- a/blocks/element/__like-button/element__like-button.css
+++ b/blocks/element/__like-button/element__like-button.css
@@ -4,7 +4,7 @@
   padding: 10px;
   align-self: center;
   background-image: url(../../../images/like-button.svg);
-  background-color: #fff;
+  background-color: rgba(255,255,255,0);
   background-repeat: no-repeat;
   object-fit: cover;
   background-position: center;
