--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -2,7 +2,7 @@
   max-width: 880px;
   margin: 0 auto;
   display: grid;
-  grid-template-columns: repeat(auto-fit, 282px);
+  grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
   column-gap: 17px;
   row-gap: 20px;
 }
@@ -10,7 +10,7 @@
 @media screen and (max-width: 890px) {
  .elements{
     padding: 0 19px 0;
-    justify-content: center;
+    justify-items: center;
     column-gap: 20px;
   }
 }
