--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,15 +1,15 @@
 .header {
-  max-width: 880px;
+  width: calc(100% / 1.4);
   margin: 0 auto;
   padding: 45px 0 40px;
-  opacity: 0.7;
   border-bottom: 1px solid #545454;
+  align-self: center;
 }
 
 
 @media screen and (max-width: 890px) {
   .header {
-    padding: 28px 0 42px 27px;
+    padding: 28px 0 31.6px 27px;
   }
 
 }
