--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,6 +1,13 @@
 .page {
   background-color: #000;
   min-width: 320px;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
   color: white;
-  font-family: 'Inter';
+  font-family: 'Inter', Arial, sans-serif;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
 }
