--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -21,5 +21,7 @@
 @media screen and (max-width: 600px) {
   .popup__save-button {
     width: 238px;
+    font-size: 14px;
+    line-height: 17px;
   }
 }
