--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,13 +1,14 @@
 .profile__add-button {
   width: 150px;
   height: 50px;
-  background-color: #000;
+  background-color: rgba(0, 0, 0, 0);
   background-image: url(../../../images/add-button.svg);
   background-repeat: no-repeat;
   object-fit: cover;
   background-position: center;
-  border: 1px solid #FFF;
+  border: 2px solid #FFF;
   cursor: pointer;
+  border-radius: 2px;
   transition: opacity .2s ease-in-out;
 }
 
