--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -2,15 +2,23 @@
   width: 24px;
   height: 24px;
   background-image: url(../../../images/edit-button.svg);
-  background-color: #000;
+  background-color: rgba(0,0,0,0);
   background-repeat: no-repeat;
   object-fit: cover;
   background-position: center;
   border: 1px solid #FFF;
   cursor: pointer;
   transition: opacity .2s ease-in-out;
+  align-self: flex-end;
 }
 
 .profile__edit-button:hover {
   opacity: .6;
+}
+
+@media screen and (max-width: 425px) {
+  .profile__edit-button {
+    width: 18px;
+    height: 18px;
+  }
 }
