--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -1,13 +1,19 @@
 .profile__subtitle {
-  margin: 0;
+  margin-top: 16px;
+  margin-bottom: 0;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 336px;
 }
 
 @media screen and (max-width: 425px) {
   .profile__subtitle {
+    margin-top: 14px;
     font-size: 14px;
     line-height: 17px;
     text-align: center;
