--- a/blocks/profile/__title-text/profile__title-text.css
+++ b/blocks/profile/__title-text/profile__title-text.css
@@ -13,6 +13,7 @@
 
 @media screen and (max-width: 425px) {
   .profile__title-text {
+    max-width: 189px;
     font-size: 27px;
     padding-right: 10px;
     line-height: 33px;
