--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -9,7 +9,7 @@
   border: 1px solid #FFF;
   cursor: pointer;
   transition: opacity .2s ease-in-out;
-  align-self: flex-end;
+  align-self: center;
 }
 
 .profile__edit-button:hover {
