--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -14,6 +14,7 @@
 @media screen and (max-width: 425px) {
   .profile__subtitle {
     margin-top: 14px;
+    margin-left: 0;
     font-size: 14px;
     line-height: 17px;
     text-align: center;
