--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -9,13 +9,14 @@
 @media screen and (max-width: 890px) {
   .header {
     width: calc(100% / 1.4);
-    padding: 28px 0 31.6px 27px;
+    padding: 28px 0 31.6px;
   }
 
 }
 
 @media screen and (max-width: 325px) {
   .header {
-    min-width:320px
+    width:100%;
+
   }
 }
